<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="79dp"
            android:onClick="callWeaponInspect"
            android:text="@string/teamManagementWeapon" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="79dp"
            android:onClick="callArmorInspect"
            android:text="@string/teamManagementArmor" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="79dp"
            android:onClick="callTrinketInspect"
            android:text="@string/teamManagementTrinket" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="79dp"
            android:onClick=""
            android:text="@string/teamManagementSatsui" />

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="350dp"

        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="110sp"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:layout_weight="0.15"
            android:height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:text="@string/menu">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:onClick="selectCharacter1"
                android:text="@string/character1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:onClick="selectCharacter2"
                android:text="@string/character2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:onClick="selectCharacter3"
                android:text="@string/character3" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:onClick="selectCharacter4"
                android:text="@string/character4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="0.5"
            android:gravity="center">

            <ImageView
                android:id="@+id/teamManagementImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/gokuhouse" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="110sp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_weight="0.15"
            android:height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:text="@string/menu">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:onClick="selectCharacter5"
                android:text="@string/character5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:onClick="selectCharacter6"
                android:text="@string/character6" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:onClick="selectCharacter7"
                android:text="@string/character7" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:onClick="selectCharacter8"
                android:text="@string/character8" />
        </LinearLayout>
    </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:onClick=""
                android:text="@string/teamManagementSkill1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:onClick=""
                android:text="@string/teamManagementSkill2" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:onClick=""
                android:text="@string/teamManagementSkill3" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:onClick=""
                android:text="@string/teamManagementSkill4" />
        </LinearLayout>
    </LinearLayout>