<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/inspectImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/gokuhouse" />
        <TextView
            android:id="@+id/inspectDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/testdescription"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="79dp"
            android:onClick="returnInspectToTeam"
            android:text="@string/change" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="79dp"
            android:onClick="returnInspectToTeam"
            android:text="@string/returnn" />

    </LinearLayout>

</LinearLayout>